Fix a little alignment issue

--- a/src/SaveModal.scss
+++ b/src/SaveModal.scss
@@ -84,7 +84,7 @@
       border-bottom-right-radius: 2vmin;
       border: none;
       height: 100%;
-      width: 10vmin;
+      width: 7em;
       cursor: pointer;
       background: $light-grey;
       color: white;
